<resources>
    <string name="app_name">MasqueINGOUF</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="numberAddress">Address number</string>
    <string name="streetName">Street name</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="cancel">Cancel</string>
    <string name="valid">Accept</string>
    <string name="id">INFORMATIONS</string>
    <string name="address">ADDRESS</string>
</resources>
